<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about_us">About Us</string>
    <string name="app_name">Volume Key App Locker</string>
    <string name="application_icon">Application Icon</string>
    <string name="instruction_manual">Instruction Manual</string>
    <string name="lock_application">Lock Application</string>
    <string name="locked_apps">Locked Apps</string>
    <string name="manage_apps">Manage Apps</string>
    <string name="reading_password">Reading Passphrase</string>
    <string name="set_password">Set Password</string>
    <string name="para_about_us1">Applocker provides a secure way to lock your applications.</string>
    <string name="para_about_us2">This application uses the volume key pattern to lock down your
        applications.The third user does not even know if the application is locked.
        Hence providing maximum privacy to the user. Applocker is free, easy to use and completely
        reliable. Now hide all the personal information from the external threats and without
        any worries.</string>
    <string name="para_about_us3">The application is submitted as a "Mini Project", to the
        Information Technology Department of Yeshwantrao Chavan College Of Engineering, Nagpur.
        Applocker is developed under the guidance of Prof. Swati Kale, by Priyanka Uppalwar,
        Meghna Bhalotia, Krinjal Wankhede, Chaya Mahale and Himanshu Madavi. The project is
        co-ordinated by Prof. Nisha Wankhede. </string>

    <string-array name="instruction_strings">
        <item>Lock Applications:\nSwipe the application from unlocked list to right.</item>
        <item>Update List:\nJust pull down the list to refresh.</item>
        <item>Remove Locked Application:\nSwipe application to right.</item>
        <item>Change Key:\nTap on Set Password, select number of keys, press your volume button pattern twice.</item>
        <item>Wrong Unlocking Key:\nJust tap on the screen and try again.</item>
    </string-array>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="instructions_on_the_set_password_page_">Instructions on the set password page.</string>
    <string name="reset">Reset</string>
    <string name="title_activity_activity_app_locker">ActivityAppLocker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>