<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rgu5android.application.locker.ActivityAboutUs" >

    <item
        android:id="@+id/action_instruction_manual"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/instruction_manual"/>
    <item
        android:id="@+id/action_manage_apps"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/manage_apps"/>
    <item
        android:id="@+id/action_locked_apps"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/locked_apps"/>
    <item
        android:id="@+id/action_set_password"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/set_password"/>

</menu>