<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".reset_password" >

    <TextView
        android:id="@+id/label_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/instructions_on_the_set_password_page_"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_set_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_instruction"
        android:layout_margin="5dp"
        android:text="@string/set_password"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/label_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_set_password"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:ems="10"
        android:gravity="center"
        android:textSize="60sp" />

    <LinearLayout
        android:id="@+id/linearLayout_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp" >

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/save"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>